--- a/personalProject/README.rdoc
+++ b/personalProject/README.rdoc
@@ -2,26 +2,28 @@
 
 <b>Title:</b>
 Free and For Sale  
-= Team Members: Michael Chen, Nhi Quach, Hubert Tsen, Jason Xie  
-= Demo Link:   
-= Idea: An application like the Berkeley Free and For Sale page. Users can make, edit, and delete postings and comment on other postings  
+<b>Team Members:</b>
+Michael Chen, Nhi Quach, Hubert Tsen, Jason Xie  
+<b>Demo Link: </b>  
+<b>Idea:</b>
+An application like the Berkeley Free and For Sale page. Users can make, edit, and delete postings and comment on other postings  
 
 
 = Models and Description 
 
-= User:  
+<b> User: </b> 
 * has name, email, address, and many comments and posts  
 * can edit and delete their own posts  
 
-= Post:  
+<b> Post: </b>
 * has title, description, image, comments thread  
 * belongs to User, has many comments  
 
-= Comment:  
+<b> Comment: </b>
 * has text and belongs to a User and Post  
 
  
-= Features:  
+<b> Features: </b> 
 * Users can log in and create posts  
 * Users can edit and delete posts  
 * Posts are filtered by location and tags  
@@ -30,7 +32,7 @@ Free and For Sale
 * Users can comment on posts  
 
 
-= Division of Labor:  
+<b> Division of Labor: </b>
 * Michael: Added geocoding functionality to filter posts  
 * Nhi: Create Posts and Users/Views  
 * Hubert: User abilities     
