whitespace readme pls work

--- a/personalProject/README.rdoc
+++ b/personalProject/README.rdoc
@@ -1,12 +1,12 @@
 == README
 
-<b>Title:</b>
-Free and For Sale    
-<p><b>Team Members:</b>
-Michael Chen, Nhi Quach, Hubert Tsen, Jason Xie </p>
-<p><b>Demo Link: </b> </p> 
-<p><b>Idea:</b>
-An application like the Berkeley Free and For Sale page. Users can make, edit, and delete postings and comment on other postings  </p>
+<b>Title:</b>  
+Free and For Sale        
+<b>Team Members:</b>  
+Michael Chen, Nhi Quach, Hubert Tsen, Jason Xie   
+<b>Demo Link: </b>   
+<b>Idea:</b>
+An application like the Berkeley Free and For Sale page. Users can make, edit, and delete postings and comment on other postings 
 
 
 = Models and Description 
