--- a/personalProject/README.rdoc
+++ b/personalProject/README.rdoc
@@ -1,12 +1,9 @@
 == README
 
-* <b>Title:</b>  
-Free and For Sale        
-* <b>Team Members:</b>  
-Michael Chen, Nhi Quach, Hubert Tsen, Jason Xie   
+* <b>Title:</b>  Free and For Sale        
+* <b>Team Members:</b> Michael Chen, Nhi Quach, Hubert Tsen, Jason Xie   
 * <b>Demo Link: </b>   
-* <b>Idea:</b>
-An application like the Berkeley Free and For Sale page. Users can make, edit, and delete postings and comment on other postings 
+* <b>Idea:</b> An application like the Berkeley Free and For Sale page. Users can make, edit, and delete postings and comment on other postings 
 
 
 = Models and Description 
