--- a/personalProject/README.rdoc
+++ b/personalProject/README.rdoc
@@ -1,6 +1,6 @@
-== README
+== Free & For Sale
 
-* <b>Title:</b>  Free and For Sale        
+* <b>Title:</b>  Free & For Sale        
 * <b>Team Members:</b> Michael Chen, Nhi Quach, Hubert Tsen, Jason Xie   
 * <b>Demo Link: </b>   
 * <b>Idea:</b> An application like the Berkeley Free and For Sale page. Users can make, edit, and delete postings and comment on other postings 
